add starting code to movie posters in grid layout

--- a/popular-movies/app/src/main/res/values/strings.xml
+++ b/popular-movies/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Popular Movies</string>
+    <string name="button_popular">Most Popular</string>
+    <string name="button_rating">Highest Ratings</string>
 </resources>
