--- a/popular-movies-app-2/app/src/main/res/values/strings.xml
+++ b/popular-movies-app-2/app/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="ratings_label">Ratings: </string>
     <string name="date_label">Release Date: </string>
     <string name="ratings_suffix">/10</string>
-
+    <string name="trailers_label">Trailers: </string>
+    <string name="reviews_label">Reviews: </string>
+    <string name="no_videos">No videos available</string>
 </resources>
