--- a/popularmoviesapp2/app/src/main/res/values/strings.xml
+++ b/popularmoviesapp2/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="trailers_label">Trailers: </string>
     <string name="reviews_label">Reviews: </string>
     <string name="no_videos">No videos available</string>
+    <string name="no_reviews">No reviews available</string>
 </resources>
