add the LIKE button and add event listener

--- a/popularmoviesapp2/app/src/main/res/values/strings.xml
+++ b/popularmoviesapp2/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="reviews_label">Reviews: </string>
     <string name="no_videos">No videos available</string>
     <string name="no_reviews">No reviews available</string>
+    <string name="favorite_movie">LIKE</string>
 </resources>
