add like button and write code to delete/add to database

--- a/popularmoviesapp2/app/src/main/res/values/strings.xml
+++ b/popularmoviesapp2/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Popular Movies</string>
     <string name="button_popular">Most Popular</string>
     <string name="button_ratings">Top Ratings</string>
+    <string name="button_like">Your Movies</string>
     <string name="no_internet">Error: No Internet Connection.</string>
     <!-- for movie details view -->
     <string name="plot_label">Synopsis: </string>
