--- a/baking-app/app/src/main/res/values/strings.xml
+++ b/baking-app/app/src/main/res/values/strings.xml
@@ -1,5 +1,3 @@
 <resources>
-    <string name="app_name">baking-app</string>
-    <string name="title_recipe_list">Recipes</string>
-    <string name="title_recipe_detail">Recipe Detail</string>
+    <string name="app_name">Baking Recipe</string>
 </resources>
