--- a/baking-app/app/src/main/res/values/strings.xml
+++ b/baking-app/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Baking Recipe</string>
+    <string name="title_recipe_list">Recipes</string>
+    <string name="title_recipe_detail">Recipe Detail</string>
 </resources>
