--- a/baking-app/app/src/main/res/values/strings.xml
+++ b/baking-app/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Baking Recipe</string>
     <string name="title_recipe_list">Recipes</string>
     <string name="title_recipe_detail">Recipe Detail</string>
+    <string name="step_title_label">Steps</string>
 </resources>
