--- a/BakingRecipes/app/src/main/res/values/strings.xml
+++ b/BakingRecipes/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="title_recipe_detail">Recipe Detail</string>
     <string name="step_title_label">Steps</string>
     <string name="no_video_label">No Video Available</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 </resources>
