build homepage ui

--- a/Capstone_Stage2/app/src/main/res/values/strings.xml
+++ b/Capstone_Stage2/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">PodcastBeMine</string>
+    <string name="title_1">PODCAST</string>
+    <string name="title_2">BE</string>
+    <string name="title_3">MINE</string>
+
+    <string name="homepage_icon_contentDescription">radio icon</string>
 </resources>
