--- a/Capstone_Stage2/app/src/main/res/values/strings.xml
+++ b/Capstone_Stage2/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
         <item>Episode</item>
         <item>Podcast</item>
     </string-array>
+    <string name="title_podcast_list">Podcasts</string>
+    <string name="title_podcast_detail">Podcast Detail</string>
 
     <!-- universal -->
 </resources>
