--- a/Capstone_Stage2/app/src/main/res/values/strings.xml
+++ b/Capstone_Stage2/app/src/main/res/values/strings.xml
@@ -20,8 +20,16 @@
         <item>Episode</item>
         <item>Podcast</item>
     </string-array>
+
+    <!-- For podcast list page -->
     <string name="title_podcast_list">Podcasts</string>
     <string name="title_podcast_detail">Podcast Detail</string>
+    <string name="podcast_api_error">Error fetching podcasts.\nTry again later.</string>
+    <string name="no_podcasts_found">No Results Found</string>
+
+    <!-- For podcast details page -->
+    <string name="podcast_details">test details about the podcast</string>
 
     <!-- universal -->
+    <string name="no_internet_error">No Internet Connection</string>
 </resources>
