--- a/Capstone_Stage2/app/src/main/res/values/strings.xml
+++ b/Capstone_Stage2/app/src/main/res/values/strings.xml
@@ -28,7 +28,16 @@
     <string name="no_podcasts_found">No Results Found</string>
 
     <!-- For podcast details page -->
-    <string name="podcast_details">test details about the podcast</string>
+    <string name="podcast_details">test details about the podcast.fdsafasfas.fsdafas fdsa.fdsas.
+        fdsafds fdsakjfas fdsa fadsf. dsfas    fdsaf fdsaf afdsa fa.f dasljdfsaf;das
+    dsfalkjf fdsa;fj dsajfasdfjl; jfdsa;fj dsaf;kl asfuaoisuf;djsa fdsa;fj aasfsfa
+    afdasfjdas ;fdjsa;fj;a djfk;askfjk asdfads;fjkdsafoweiurifdvncx
+    dfsalfj fdsn,xcnv asdofuoewiu fsadfja as dsf;as </string>
+    <string name="podcast_author">By Boba Fett</string>
+    <string name="podcast_audio_length">Audio: 145 mins</string>
+    <string name="podcast_thumbnail_contentDescription">Podcast thumbnail</string>
+    <string name="podcast_start_btn">START PODCAST</string>
+    <string name="podcast_widget_btn">ADD TO WIDGET</string>
 
     <!-- universal -->
     <string name="no_internet_error">No Internet Connection</string>
