add sign in error activity and internet check

--- a/Capstone_Stage2/app/src/main/res/values/strings.xml
+++ b/Capstone_Stage2/app/src/main/res/values/strings.xml
@@ -48,5 +48,5 @@
 
     <!-- universal -->
     <string name="no_internet_error">No Internet Connection</string>
-
+    <string name="unknown_error">Unknown Error.\nTry again later.</string>
 </resources>
