--- a/Capstone_Stage2/app/src/main/res/values/strings.xml
+++ b/Capstone_Stage2/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="podcast_widget_btn">ADD TO WIDGET</string>
 
     <!-- For play podcast page -->
-    <string name="play_podcast_contentDescription">Some content description for audio</string>
+    <string name="play_podcast_contentDescription">Audio of podcast playing</string>
     <string name="play_podcast_error">Error playing podcast.\nTry again later.</string>
     <string name="play_podcast_no_url">Podcast does not have an audio file.</string>
 
@@ -51,4 +51,6 @@
     <!-- universal -->
     <string name="no_internet_error">No Internet Connection</string>
     <string name="unknown_error">Unknown Error.\nTry again later.</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 </resources>
